Added validations, and fixed student

--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -1,7 +1,12 @@
 <div id="<%= dom_id student %>">
   <p>
-    <strong>Name:</strong>
-    <%= student.name %>
+    <strong>First Name:</strong>
+    <%= student.first_name %>
+  </p>
+
+  <p>
+    <strong>Last Name:</strong>
+    <%= student.last_name %>
   </p>
 
   <p>
@@ -23,5 +28,4 @@
     <strong>Graduation date:</strong>
     <%= student.graduation_date %>
   </p>
-
 </div>
